<resources>
    <string name="app_name">Instant Service</string>
    <string name="web_client_id">225226042678-ji7hthifmrcra034k6vu3ocudr0rqk80.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Hello</string>
    <string name="please_sign_in">Please sign in to continue</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="doctor">Doctor</string>
    <string name="alerts">Alerts</string>
    <string name="type_your_message">Type your message…</string>
    <string name="alerts_notif_channel">intent_service_alerts</string>
    <string name="alerts_notif_channel_title">Alerts</string>
    <string name="alerts_notif_topic" translatable="false">alerts</string>
    <string name="alert_title">Title</string>
    <string name="alert_description">Description</string>
    <string name="panic_button">Panic Button</string>
    <string name="disability_mode_title">Disability mode</string>
    <string name="disability_mode_button">Disability Mode</string>
    <string name="send_sos_message">Are you in an urgent situation? Ask for assistance immediately!</string>
    <string name="SOS">Send messages</string>
    <string name="call_the_hospital">Call the hospital</string>
    <string name="call_emergency_contact">Call emergency contact</string>
    <string name="driving_mode_title">Driving Mode</string>
    <string name="driving_mode_button">Driving Mode</string>
    <string name="zeroSpeed">---</string>
    <string name="metric">km/h</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_violation_details">Violation Details</string>
    <string name="title_activity_violations">Violations</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="language_header">Language</string>
    <string name="speed_header">Driving Mode</string>
    <string name="emergency_header">Emergency Contacts</string>
    <string name="emergency_phone">Phone number</string>
    <string name="emergency_email">Email</string>
    <string name="speed_limit_title">Speed limit</string>
    <string name="title_activity_maps">Map</string>
    <string name="more_button">more</string>
    <string name="violation_timestamp_title">Timestamp</string>
    <string name="violation_longitude_title">Longitude</string>
    <string name="violation_latitude_title">Latitude</string>
    <string name="violation_speed_title">Speed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Main</string>
    <string name="tab_text_2">Violations</string>
    <string name="tab_text_3">Map</string>
    <string name="sign_in_with_fingerprint">Use fingerprint</string>
    <string name="security">Be more secure</string>
    <string name="fingerprint">Please verify your fingerprint</string>
    <string name="language">Choose language</string>
    <string name="default_language">Languages</string>
    <string name="alerts_help_label">Alerts</string>
    <string name="alerts_help">Anytime there is an emergency we will inform you with alert notifications. When you receive an alert, you are encouraged to follow the instructions included to stay safe.</string>
    <string name="doctor_help_label">Doctor</string>
    <string name="doctor_help">Anytime you seek medical advice from a licensed doctor, this chat room will come in use. You can type messages anytime on any matter, to describe the problem you have.</string>
    <string name="sending_messages_label">Sending messages</string>
    <string name="sending_messages_help">To send a message, click on the input field near the bottom of the activity. Then, carefully type your message and press the enter key on your keyboard to send it.</string>
    <string name="sending_messages_help_2">Your messages are always shown on the right hand side of the screen and bare your name on top of the message bubble.</string>
    <string name="receiving_messages_help_label">Receiving messages</string>
    <string name="receiving_messages_help">When a licensed doctor replies, your will see their messages on the left hand side of the screen and bare their name. Please comply with instructors and ask for clarification if nessesary.</string>
    <string name="home_help_label">Home</string>
    <string name="home_help">The home activity allows your to access driving mode, disability mode and the panic button.</string>
    <string name="home_help_2">The two modes are able to assist you with every day tasks and provide medical care in case of an emergency.</string>
    <string name="driving_mode_help_label">Driving Mode</string>
    <string name="driving_mode_help">Whenever you are driving, you can enable this mode to control your driving speed.</string>
    <string name="driving_mode_help_2">In case of a speeding violation, you can check out the map overview for detailed markers.</string>
    <string name="disability_mode_help_label">Disability Mode</string>
    <string name="disability_mode_help">If you frequently lose your balance when walking, you can enable this mode to increase safety.</string>
    <string name="disability_mode_help_2">In case of a sudden acceleration spike, which can be caused by a fall, we can call for assistance for you.</string>
    <string name="panic_button_help_label">Panic Button</string>
    <string name="panic_button_help">When something\'s not right, you can press the panic button to make rapid calls, texts or get in touch with a hospital.</string>
    <string name="enable_speed_capture_help_label">Enable speed capture</string>
    <string name="enable_speed_capture_help">Click enable button to start speed capture.</string>
    <string name="disable_speed_capture_help_label">Disable speed capture</string>
    <string name="disable_speed_capture_help">Click disable button to stop speed capture</string>
    <string name="display_all_violations_help_label">Display all violations</string>
    <string name="display_all_violations_help">Click violations button to display all violations. You ca filter the violations by clicking the filter floating button! You can filter by custom date or you can display the violations of the past week!</string>
    <string name="display_single_violation_help_label">Display single violation</string>
    <string name="display_single_violation_help">Click the \'more\' button of a violation to display its details.</string>
    <string name="map_help_label">Display map with every violation</string>
    <string name="map_help">You can navigate through the map and see every place where a violation has been committed.</string>
    <string name="settings_help_label">Settings</string>
    <string name="settings_help">Click the dots on the top right corner to edit the application settings.  You can configure the speed limit! (Default 50 kmh)</string>
    <string name="speech_recognition_help_label">Speech Recognition</string>
    <string name="speech_recognition_help">On the main screen, click the floating button with the microphone to enable speech recognition! You must start your command saying \'speed\' or \'speedometer\' and then one of the following words:</string>
    <string name="speech_recognition_help_2">1. \'start\' to enable the speed capture. 2. \'stop\' to disable speed capture. 3. \'violations\' to go to violations list. 4. \'map\' to go to map.</string>
    <string name="panic_speech_recognition_help">If you click the floating button with the microphone you can enable speech recognition! You can execute your command by saying one of the following words:</string>
    <string name="panic_speech_recognition_help_2">1. \'Send message\' to send the emergency email and text message. 2. \'Call Hospital\' to immediately call the hospital. 3. \'Call emergency contact\' to immediately call your emergency contact.</string>
    <string name="send_message_help_label">Send message</string>
    <string name="send_message_help">Press the send message button to immediately send an email and text message to your emergency contact</string>
    <string name="call_the_hospital_help_label">Call the hospital</string>
    <string name="call_the_hospital_help">If you need to call a hospital immediately press the call hospital button</string>
    <string name="call_emergency_contact_help_label">Call emergency contact</string>
    <string name="call_emergency_contact_help">If you need to call immediately your emergency contact then press call emergency contact button</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enable_speed">Speed capture is enabled</string>
    <string name="disable_speed">Speed capture is disabled</string>
    <string name="please_speak">Please speak now!</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="warning_speed">Warning! You have exceeded the speed limit.</string>
    <string name="gps_connection">Waiting for GPS connection</string>
    <string name="available_commands_drive">Available commands are \'start\', \'stop\', \'violations\', \'map\'</string>
    <string name="init_speech_drive">Initialize speech recognition say \'speed\' or \'speedometer\' following by your command!</string>
    <string name="TTS_start_drive">Start with \'speed\' or speedometer following by your command!</string>
    <string name="speed_alert_decrease">ABRUPT SPEED DECREASE</string>
    <string name="need_help_quest">Are you ok? Do you need help?</string>
    <string name="need_help">I Need help</string>
    <string name="no_thanks">No thanks</string>
    <string name="sms_success">SMS Sent Successfully</string>
    <string name="sms_fail">SMS Failed to Send, Please try again</string>
    <string name="email_sucess">Email Sent Successfully</string>
    <string name="no_client">There is no email client installed.</string>
    <string name="select_again">Select dates and try again!</string>
    <string name="need_help_urgent">I need help, this is urgent!!!</string>
    <string name="commands_panic">The available commands are \'send message\', \'call hospital\', \'call contact\'</string>
    <string name="TTS_panic">The available commands are \'send message\', \'call hospital\', \'call contact\'</string>
    <string name="fall_detected">FALL DETECTED!</string>
    <string name="auth_fail">Authentication error:</string>
    <string name="auth_success">Authentication succeeded!</string>
    <string name="biometric_login">Biometric login</string>
    <string name="biometric_credential">Log in using your biometric credential</string>
    <string name="use_password">Use account password</string>
    <string name="enter_speed">Enter the speed limit</string>
    <string name="enter_phone">Enter a valid phone number</string>
    <string name="enter_mail">Enter a valid email</string>
    <string name="home_unknown_speech_command">Please try one of the following commands: doctor, alerts, driving mode, disability mode.</string>
    <string name="about">About</string>
    <string name="filters">Filters</string>
    <string name="all">All</string>
    <string name="last_week">Last week</string>
    <string name="custom_range">Custom range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reset">Reset</string>
    <string name="ok">Ok</string>
    <string-array name="languages">
        <item>English</item>
        <item>Greek</item>
    </string-array>
    <string-array name="languagesValues">
        <item>en</item>
        <item>el</item>
    </string-array>
</resources>