<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/language_header">

        <EditTextPreference
            app:key="language_value"
            app:title="EDO THA MPEI DROPDOWN"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="3"
            app:defaultValue="50"
            app:dialogTitle="Enter the speed limit"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/speed_header">

        <EditTextPreference
            app:key="speed_limit_value"
            app:title="@string/speed_limit_title"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="3"
            app:defaultValue="50"
            app:dialogTitle="Enter the speed limit"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/emergency_header">

        <EditTextPreference
            app:key="emergency_phone"
            app:title="@string/emergency_phone"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="10"
            app:dialogTitle="Enter a valid phone number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="emergency_email"
            app:title="@string/emergency_email"
            android:inputType="text"
            app:dialogTitle="Enter a valid email"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>


</PreferenceScreen>
