<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drive.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/violations_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="0.5"
                android:foregroundTint="#1AFFFEFE"
                android:text="@string/title_activity_violations"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/map_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="0.5"
                android:foregroundTint="#1AFFFEFE"
                android:text="@string/title_activity_map"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/zeroSpeed"
            android:textSize="56sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/metric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/metric"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/enableButton"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="0.5"
                android:foregroundTint="#1AFFFEFE"
                android:text="@string/enable"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/disableButton"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_weight="0.5"
                android:text="@string/disable"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C7C6C6"
            android:textSize="20sp"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/speech_recognition_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mic_black_24dp"
        android:layout_gravity="bottom|end"/>

</FrameLayout>